Math_64/evosuite/original/evosuite-report-org/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_64_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Math_64/Math/evosuite/1/org/apache/commons/math/optimization/general/LevenbergMarquardtOptimizer_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Math_64/Math/evosuite/1/org/apache/commons/math/optimization/general/LevenbergMarquardtOptimizer_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Math_64/Math/evosuite/0/org/apache/commons/math/optimization/general/LevenbergMarquardtOptimizer_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Math_64/Math/evosuite/0/org/apache/commons/math/optimization/general/LevenbergMarquardtOptimizer_ESTest_scaffolding.java >> evosuite-report-org/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Math_64/Math/evosuite/0/org/apache/commons/math/optimization/general/LevenbergMarquardtOptimizer_ESTest.java:16: error: duplicate class: org.apache.commons.math.optimization.general.LevenbergMarquardtOptimizer_ESTest
public class LevenbergMarquardtOptimizer_ESTest extends LevenbergMarquardtOptimizer_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Math_64/Math/evosuite/0/org/apache/commons/math/optimization/general/LevenbergMarquardtOptimizer_ESTest_scaffolding.java:18: error: duplicate class: org.apache.commons.math.optimization.general.LevenbergMarquardtOptimizer_ESTest_scaffolding
public class LevenbergMarquardtOptimizer_ESTest_scaffolding {
       ^
2 errors
